--- a/.env.exemplo
+++ b/.env.exemplo
@@ -8,3 +8,11 @@ EMAIL_HOST_PASSWORD = "senha do app gmail do class"
 
 #SECRET_KEY DJANGO
 SECRET_KEY = "Secret_Key do Django"
+
+#POSTGRES 
+POSTGRES_PASSWORD = "Senha do postgres"
+POSTGRES_USER = "User do postgres"
+POSTGRES_PORT = "Porta utilizada"
+POSTGRES_HOST = "Host utilizada"
+POSTGRES_NAME = "Nome do projeto postgres"
+
