--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ dependencies = [
     "dotenv>=0.0.5",
     "python-dotenv>=1.0.1",
     "pandas>=2.2.2",
+    "psycopg2-binary>=2.9.9",
 ]
 requires-python = ">=3.10"
 license = {text = "MIT"}
