Update .env.exemplo and docker-compose.yml files

--- a/.env.exemplo
+++ b/.env.exemplo
@@ -10,9 +10,10 @@ EMAIL_HOST_PASSWORD = "senha do app gmail do class"
 SECRET_KEY = "Secret_Key do Django"
 
 #POSTGRES 
-POSTGRES_PASSWORD = "Senha do postgres"
-POSTGRES_USER = "User do postgres"
-POSTGRES_PORT = "Porta utilizada"
-POSTGRES_HOST = "Host utilizada"
-POSTGRES_NAME = "Nome do projeto postgres"
+# POSTGRES_PASSWORD = "Senha do postgres"
+# POSTGRES_USER = "User do postgres"
+# POSTGRES_PORT = "Porta utilizada"
+# POSTGRES_HOST = "Host utilizada"
+# POSTGRES_NAME = "Nome do projeto postgres"
 
+# Deixar o banco postgress comentado.
